# popl2020-tutorial

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-cmake-build.yml
.run/: constraint branch0.run.xml  constraint loop0.run.xml  constraint simple0.run.xml
ex1/: CMakeLists.txt  ex1_main.cpp  ex1_tests.cpp  main_ex1.cpp
ex1/include/: Constraint.h  Extractor.h
ex1/src/: Constraint.cpp  Constraint.hh  Extractor.cpp  Extractor.hh  Utils.cpp  Utils.hh
ex1/test/: Makefile  branch0.ll  branch1.ll  branch2.ll  loop0.ll  loop1.ll  simple0.ll  simple1.ll
ex2/: CMakeLists.txt
ex2/include/: Instrument.h
ex3/: CMakeLists.txt  ex3_tests.cpp  main_ex3.cpp
ex3/include/: Extractor.h  Verifier.h
ex3/src/: Utils.cpp  Verifier.cpp
z3-4.11.0/include/: z3++.h  z3.h
